--- a/HotelBookingApp/HotelBookingApp.csproj
+++ b/HotelBookingApp/HotelBookingApp.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.3.0" />
+    <PackageReference Include="bootstrap-select" Version="1.13.18" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.18" />
