--- a/HotelBookingApp/HotelBookingApp.csproj
+++ b/HotelBookingApp/HotelBookingApp.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.3.0" />
-    <PackageReference Include="bootstrap-select" Version="1.13.18" />
+    <PackageReference Include="jQuery" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.18" />
@@ -27,6 +27,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
+    <PackageReference Include="Select2.js" Version="4.0.13" />
   </ItemGroup>
 
 </Project>
